fix: website not responsive for small devices #891

--- a/commonStyles.css
+++ b/commonStyles.css
@@ -59,6 +59,7 @@
 
 .footer-divide {
   display: flex;
+  flex-direction: column;
   justify-self: center;
   text-align: center;
   gap: 4rem;
